--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,7 @@
 .footer {
-    padding: 5% 10%;
+    padding: 10px 10%;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
 
@@ -62,12 +61,16 @@
 }
 
 @media screen and (max-width:960px) {
+    .social-icons {
+        margin-top: -20px;
+        height: 20px;
+    }
     .footer {
         padding: 5% 5%;
         display: flex;
         justify-content: space-between;
     }
     .copyright {
-        padding-top: 10px;
+        padding: 30px 0px 0px 0px;
     }
 }
